update lambdas