@@ -10,7 +10,7 @@ public class ShowcaseJava8 {
 
     public static void main(String[] args) {
         // using a 'lambda function' to express a functional strategy
-        final Comparator<Integer> comparator = (a, b) -> a - b;
+        final Comparator<Integer> comparator = Comparator.comparingInt(a -> a);
         final Set<Integer> set = new TreeSet<>(comparator);
         set.addAll(Arrays.asList(10, 20, 30, 40, 5, 6, 7, 60, 70));
         System.out.println(set);
@@ -19,7 +19,7 @@ public class ShowcaseJava8 {
         final Random random = new Random();
         final Stream<Integer> str = Stream.generate(() -> random.nextInt(6))
                                           .map(i -> i + 1);
-        System.out.println(str.limit(20).collect(toList()));
+        System.out.println(str.limit(20).toList());
 
         // simulating large-scale data processing with parallel streams
         final List<Double> l = IntStream.range(0, 10000000)
@@ -27,12 +27,12 @@ public class ShowcaseJava8 {
                 .collect(toList());
         // sequential
         long time = System.currentTimeMillis();
-        System.out.println(l.stream().reduce((a,b)->Math.max(a,b)));
+        System.out.println(l.stream().reduce(Math::max));
         time = System.currentTimeMillis() - time;
         System.out.println("Time: " + time);
         // parallel
         long time2 = System.currentTimeMillis();
-        System.out.println(l.stream().parallel().reduce((a,b)->Math.max(a,b)));
+        System.out.println(l.stream().parallel().reduce(Math::max));
         time2 = System.currentTimeMillis() - time2;
         System.out.println("Time2: " + time2);
         System.out.println("Gain: " + (((double)time)/time2));
